<resources>
    <string name="app_name">Lesson4</string>
    <string name="shared_pref">Shared Preference</string>
    <string name="pref">Preference</string>
    <string name="shared_pref_delete">Delete Shared</string>
    <string name="pref_delete">Delete Pref</string>
    <string name="text">Text</string>
    <string name="shared_prefs_key_text">key_text</string>

    <string name="button_save">Save</string>
    <string name="button_load">Load</string>
    <string name="button_clear">Clear</string>
    <string name="button_delete">Delete</string>

    <string name="text_private">Private files</string>
    <string name="text_public">Public files</string>

    <string name="toast_file_deleted">File deleted</string>
    <string name="toast_dir_not_created">Directory not created</string>
    <string name="toast_file_not_exist">File not exist</string>
    <string name="toast_external_storage_not_found">External storage not found</string>
</resources>
