<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/shared_pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSharedPref"
            android:layout_weight="1" />

        <TextView
            android:text="@string/pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPref"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/text"
        android:id="@+id/editText" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/shared_pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSharedPref"
            android:layout_weight="1" />

        <Button
            android:text="@string/pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPref"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
